--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     </div>
     <script src="js/vendor/jquery.js"></script>    
     <script src="js/foundation.min.js"></script>
+    <script src="js/mainJQ.js"></script>
     <script>
       $(document).foundation();
     </script>
